cabal-version: 2.2
name: yaha-lang
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type: Simple
extra-source-files: CHANGELOG.md, README.md

common shared
  build-depends:
    base            >=4.13 && <4.14,
    regex-compat    >= 0.95.2.1
  default-language: Haskell2010

library
  import: shared
  hs-source-dirs: src
  exposed-modules: Yaha.Compiller.Lexer
  other-modules: Yaha.Templates

executable yaha
  import: shared
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Yaha.Compiller.Lexer
    Yaha.Templates

test-suite yaha-lang-test
  import: shared
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    LexerTest
  build-depends:
    base            >=4.13 && <4.14,
    HUnit,
    yaha-lang
  default-language: Haskell2010
