cabal-version: 2.2
name: yaha-lang
version: 0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file: LICENSE
-- author:
-- maintainer:
-- copyright:
-- category:
build-type: Simple
extra-source-files: CHANGELOG.md, README.md

common shared
  hs-source-dirs: src
  build-depends:
    base >=4.13 && <4.14,
    regex-compat >= 0.95.2.1
  default-language: Haskell2010

common exec
  import: shared
  other-modules:
    Yaha.Templates,
    Yaha.Compiller,
    Yaha.Compiller.Lexer

library
  import: shared
  hs-source-dirs: src
  exposed-modules: Yaha.Compiller
  other-modules:
    Yaha.Templates,
    Yaha.Compiller.Lexer

executable yaha
  import: exec
  main-is: Main.hs

test-suite yaha-lang-test
  import: exec
  type: exitcode-stdio-1.0
  hs-source-dirs: tests, src
  build-depends:
    HUnit == 1.6.2.0
  main-is: Tests.hs
  other-modules:
    LexerTest
